--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.5",
     "@tailwindcss/typography": "^0.5.16",
+    "prettier": "^3.5.0",
+    "prettier-plugin-go-template": "^0.0.15",
     "tailwindcss": "^4.0.5"
   }
 }
